# propose-rs

./: .gitignore  Cargo.toml  README.md  Usage.md
benches/: propose.rs
src/: cli.rs  interpreter.rs  lib.rs  main.rs  structs.rs
src/interpreter/: ast.rs  builtin.rs  default.rs  draw.rs  eval.rs  functions.rs  interpret.rs  parser.pest  parser.rs  structs.rs  utils.rs
src/interpreter/builtin/: config.rs  decor.rs  functions.rs
src/interpreter/draw/: decor.rs  dobjects.rs  label.rs  render.rs
src/interpreter/parser/: ast.rs
src/interpreter/tests/: interpreter.rs  parser.rs
src/interpreter/tests/snapshots/: propose__interpreter__tests__interpreter__interpreter@arc.prs.snap  propose__interpreter__tests__interpreter__interpreter@draw_angle.prs.snap  propose__interpreter__tests__interpreter__interpreter@euler.prs.snap  propose__interpreter__tests__interpreter__interpreter@harmonic.prs.snap  propose__interpreter__tests__interpreter__interpreter@pascal.prs.snap  propose__interpreter__tests__interpreter__interpreter@problem1.prs.snap  propose__interpreter__tests__interpreter__interpreter@reim.prs.snap  propose__interpreter__tests__interpreter__interpreter@trisect.prs.snap  propose__interpreter__tests__parser__interpreter@arc.prs.snap  propose__interpreter__tests__parser__interpreter@draw_angle.prs.snap  propose__interpreter__tests__parser__interpreter@euler.prs.snap  propose__interpreter__tests__parser__interpreter@harmonic.prs.snap  propose__interpreter__tests__parser__interpreter@pascal.prs.snap  propose__interpreter__tests__parser__interpreter@problem1.prs.snap  propose__interpreter__tests__parser__interpreter@reim.prs.snap  propose__interpreter__tests__parser__interpreter@trisect.prs.snap  propose__interpreter__tests__parser__parser-10.snap  propose__interpreter__tests__parser__parser-11.snap  (+11 more)
test/: euler.prs  harmonic.prs
test_input/: arc.prs  draw_angle.prs  pascal.prs  problem1.prs  reim.prs  trisect.prs
