[package]
name = "propose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
if_chain = "1.0.2"
itertools = "0.10.5"
lazy_static = "1.4.0"
metric-rs = "0.1.2"
pest = "2.0"
pest_consume = "1.1.3"
pest_derive = "2.0"
