[package]
name = "propose"
version = "0.1.0"
edition = "2021"
description = "A tool to generate geometric figures."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
if_chain = "1.0.2"
itertools = "0.10.5"
lazy_static = "1.4.0"
# metric-rs = { git = "https://github.com/atzlt/metric-rs.git", rev = "0f7fd33" }
metric-rs = { path = "../metric-rs" }
pest = "2.0"
pest_consume = "1.1.3"
pest_derive = "2.0"
rayon = "1.7.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"]}

[[bench]]
name = "propose"
harness = false
