[package]
name = "propose"
version = "0.1.0"
edition = "2021"
description = "A tool to generate geometric figures."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
if_chain = "1.0.2"
itertools = "0.10.5"
lazy_static = "1.4.0"
metric-rs = { path = "../metric-rs", features = ["serialize"] }
pest = "2.0"
pest_consume = "1.1.3"
pest_derive = "2.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
serde = { version = "1.0.164", features = ["derive"] }
insta = { version = "1.30.0", features = ["yaml", "glob"] }

[profile.release]
lto = true
strip = true

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[[bench]]
name = "propose"
harness = false
